Update input Total Forecast